# bac-starter

./: AGENTS.md  README.md  cursor_chat_recording.md  literature-review.md  pyproject.toml
.cursor/: README.md
.cursor/agents/: artifact-coherence-auditor.md  game-theory-referee.md  hank-model-auditor.md  integration-coordinator.md  microeconometrics-identification-reviewer.md  pr-reviewer.md  replication-verifier.md  sdd-orchestrator.md
.cursor/hooks/state/: continual-learning-index.json  continual-learning.json
.cursor/rules/: economic-writing-and-tables.mdc  matlab-econ-research.mdc  python-econ-research.mdc  research-reproducibility.mdc
.cursor/skills/applied-microeconometrics/: SKILL.md  reference.md
.cursor/skills/hank-modeling/: SKILL.md  (+1 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: swarm-task.md
docs/: swarm-harness-dry-run.md  swarm-harness.md
docs/workshop/: agenda_4day_en.md  module_modes_and_context.md  module_rules_memories_agentsmd.md  module_subagents.md  setup_guide.md
materials/day1/: README.md
materials/day2/: README.md
materials/day3/: README.md
materials/day4/: README.md
notes/: orchestration_log.md
plugins/bac-swarm-harness/: README.md
slides/day1/: day1_slides.md
slides/day2/: day2_slides.md
slides/day3/: day3_slides.md
slides/day4/: day4_slides.md
spec/: design.md  intent.md  requirements.md  tasks.md
steering/: coding-standards.md
tests/swarm_mcp/: test_issue_graph.py  test_log_sync.py
tools/: __init__.py
tools/swarm_mcp/: __init__.py  cli.py  github_state.py  log_sync.py  server.py
(+28 files in other folders)
